<resources>
    <string name="app_name">Turma 3SIB</string>
    <string name="hello_world">Hello World!</string>
    <string name="random">Random</string>
    <string name="random_label">Clique no botão para sortear</string>
    <string name="hint_your_name">Digite seu nome</string>
    <string name="hint_your_email">Digite seu e-mail</string>
    <string name="hint_your_password">Digite sua senha</string>
    <string name="button_continue">Continuar</string>
    <string name="already_have_account">Já tenho uma conta</string>
    <string name="register_button_login">Entrar</string>
    <string name="sorted_number">O número %2$s - %1$d</string>
    <string name="error_empty_field">Campo nome vazio ou inválido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_your_weight">Seu peso em Kg (Ex. 80Kg)</string>
    <string name="hint_your_height">Sua altura em cm (Ex. 180cm)</string>
    <string name="calculate">Calcular</string>
</resources>