<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilImcHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_top_register_screen"
        android:layout_marginEnd="@dimen/margin_default"
        android:hint="@string/hint_your_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="cm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieImcHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilImcWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_text_field_form"
        android:hint="@string/hint_your_weight"
        app:layout_constraintEnd_toEndOf="@+id/tilImcHeight"
        app:layout_constraintStart_toStartOf="@id/tilImcHeight"
        app:layout_constraintTop_toBottomOf="@+id/tilImcHeight"
        app:suffixText="kg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieImcWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btImcCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/tilImcHeight"
        app:layout_constraintStart_toStartOf="@+id/tilImcHeight"
        app:layout_constraintTop_toBottomOf="@+id/tilImcWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>