<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ivRegisterLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/netflix_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_your_name"
        app:layout_constraintBottom_toTopOf="@+id/tilRegisterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRegisterLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_your_email"
        app:layout_constraintBottom_toTopOf="@+id/tilRegisterPassword"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterName"
        app:layout_constraintStart_toStartOf="@id/tilRegisterName"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_your_password"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterName"
        app:layout_constraintStart_toStartOf="@id/tilRegisterName"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRegisterSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_continue"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/tilRegisterName"
        app:layout_constraintStart_toStartOf="@id/tilRegisterName"
        app:layout_constraintTop_toBottomOf="@+id/tilRegisterPassword" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_twitter"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google"
        android:background="?attr/selectableItemBackgroundBorderless"/>

</androidx.constraintlayout.widget.ConstraintLayout>